syntax = "proto3";

package route256.cart.api.v1;

option go_package = "api/v1/cart";

import "google/protobuf/empty.proto";

message ListItem {
  uint64 sku = 1;
  uint32 count = 2;
  string name = 3;
  uint32 price = 4;
}

message ListRequest {
  uint64 user = 1;
}

message ListResponse {
  repeated ListItem items = 1;
  uint64 total_price = 2;
}

message ClearRequest {
  uint64 user = 1;
}

message ItemAddRequest {
  uint64 user = 1;
  uint64 sku = 2;
  uint32 count = 3;
}

message ItemDeleteRequest {
  uint64 user = 1;
  uint64 sku = 2;
}

message CheckoutRequest {
  uint64 user = 1;
}

message CheckoutResponse {
  uint64 order_id = 1;
}

service Cart {
  rpc List (ListRequest) returns (ListResponse);
  rpc Clear (ClearRequest) returns (google.protobuf.Empty);
  rpc ItemAdd (ItemAddRequest) returns (google.protobuf.Empty);
  rpc ItemDelete (ItemDeleteRequest) returns (google.protobuf.Empty);
  rpc Checkout (CheckoutRequest) returns (CheckoutResponse);
}

